--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: "Pre Release"
 
 on:
   push:
-    branches:
-      - "master"
+    tags:
+      - "v*"
 
 jobs:
   pre-release:
@@ -70,38 +70,11 @@ jobs:
         name: pisugar-server-deb
         path: target/arm-unknown-linux-musleabihf/debian
 
-    # Development Release
+    # Draft Release
     - uses: "marvinpinto/action-automatic-releases@latest"
       with:
         repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        automatic_release_tag: "latest"
-        prerelease: true
-        title: "Development Build"
+        prerelease: false
+        draft: true
         files: |
-          LICENSE
-          CHANGELOG
           target/arm-unknown-linux-musleabihf/debian/*
-
-    - name: "Upload to QiNiu"
-      env:
-        QINUE_BUCKET: ${{ secrets.QINUE_BUCKET }}
-        QINUE_AK: ${{ secrets.QINUE_AK }}
-        QINUE_SK: ${{ secrets.QINUE_SK }}
-      run: |
-        sudo apt-get install -y openjdk-11-jre
-        if [ $(uname -m) == 'x86_64' ]; then
-          wget -O qsuits http://devtools.qiniu.com/qsuits_linux_amd64
-        else
-          wget -O qsuits http://devtools.qiniu.com/qsuits_linux_386
-        fi
-        chmod +x qsuits
-
-        curl https://api.github.com/repos/PiSugar/pisugar-power-manager-rs/releases/latest > latest
-
-        sudo apt-get install -y jq
-        for url in $(jq '.assets[].browser_download_url' latest); do
-          url=$(echo $url | awk -F '"' '{print $2}')
-          filename=${url##*/}
-          wget -O ${filename} ${url}
-          ./qsuits -process=qupload -path=${filename} -s -ak=${QINUE_AK} -sk=${QINUE_SK} -bucket=${QINUE_BUCKET} -key=${filename}
-        done
