--- a/.github/workflows/release-qiniu.yml
+++ b/.github/workflows/release-qiniu.yml
@@ -9,26 +9,33 @@ jobs:
     name: "Upload to QiNiu"
     runs-on: "ubuntu-latest"
     steps:
-      - name: "Upload to QiNiu"
-        env:
-          QINUE_BUCKET: ${{ secrets.QINUE_BUCKET }}
-          QINUE_AK: ${{ secrets.QINUE_AK }}
-          QINUE_SK: ${{ secrets.QINUE_SK }}
-        run: |
-          sudo apt-get install -y openjdk-11-jre
-          if [ $(uname -m) == 'x86_64' ]; then
-            wget -O qsuits http://devtools.qiniu.com/qsuits_linux_amd64
-          else
-            wget -O qsuits http://devtools.qiniu.com/qsuits_linux_386
-          fi
-          chmod +x qsuits
+    - name: "Upload to QiNiu"
+      env:
+        QINUE_BUCKET: ${{ secrets.QINUE_BUCKET }}
+        QINUE_AK: ${{ secrets.QINUE_AK }}
+        QINUE_SK: ${{ secrets.QINUE_SK }}
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y unzip
+        sudo apt-get install -y openjdk-11-jre
 
-          curl https://api.github.com/repos/PiSugar/pisugar-power-manager-rs/releases/latest > latest
+        if [ $(uname -m) == 'x86_64' ]; then
+          wget http://devtools.qiniu.com/qshell-linux-x64-v2.4.1.zip
+          unzip qshell-linux-x64-v2.4.1.zip
+          mv qshell-linux-x64-v2.4.1 qshell
+        else
+          wget http://devtools.qiniu.com/qshell-linux-x86-v2.4.1.zip
+          unzip qshell-linux-x86-v2.4.1.zip
+          mv qshell-linux-x86-v2.4.1 qshell
+        fi
+        chmod +x qshell
+        qshell account -w ${QINIU_AK} ${QINIU_SK} deploy-account
 
-          sudo apt-get install -y jq
-          for url in $(jq '.assets[].browser_download_url' latest); do
-            url=$(echo $url | awk -F '"' '{print $2}')
-            filename=${url##*/}
-            wget -O ${filename} ${url}
-            ./qsuits -process=qupload -s -path=${filename} -ak=${QINUE_AK} -sk=${QINUE_SK} -bucket=${QINUE_BUCKET} -key=${filename}
-          done
+        curl https://api.github.com/repos/PiSugar/pisugar-power-manager-rs/releases/latest > latest
+
+        sudo apt-get install -y jq
+        for url in $(jq '.assets[].browser_download_url' latest); do
+          url=$(echo $url | awk -F '"' '{print $2}')
+          filename=${url##*/}
+          qshell sync ${url} ${QINIU_BUCKET} ${filename}
+        done
