--- a/.github/workflows/release-qiniu.yml
+++ b/.github/workflows/release-qiniu.yml
@@ -36,5 +36,5 @@ jobs:
         for url in $(jq '.assets[].browser_download_url' latest); do
           url=$(echo $url | awk -F '"' '{print $2}')
           filename=${url##*/}
-          ./qshell sync ${url} ${QINIU_BUCKET} -k ${filename}
+          ./qshell sync ${url} ${QINIU_BUCKET} -k "release/${filename}"
         done
