--- a/.github/workflows/pr-build.yml
+++ b/.github/workflows/pr-build.yml
@@ -135,3 +135,8 @@ jobs:
           key=nightly/${filename}
           ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
         done
+        for f in $(find scripts -name '*.sh' ); do
+          filename=${f##*/}
+          key=nightly/${filename}
+          ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
+        done
