--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -1,9 +1,9 @@
 # Hourly build, cache not allowed
-name: Hourly build on master
+name: Nightly build on master
 
 on:
   schedule:
-    - cron: '0 */6 * * *'
+    - cron: '0 0 * * *'
 
 jobs:
   build-all:
