--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -110,5 +110,5 @@ jobs:
         for f in $(find scripts -name '*.sh' ); do
           filename=${f##*/}
           key=nightly/${filename}
-          ./qshell rput --overwrite ${QINIU_BUCKET} ${key} ${f}
+          ./qshell rput --overwrite --mimetype text/plain ${QINIU_BUCKET} ${key} ${f}
         done
