Add /ws websocket support in http server (#8)

--- a/.cargo/config
+++ b/.cargo/config
@@ -1,9 +1,11 @@
 [source.crates-io]
-registry = "https://github.com/rust-lang/crates.io-index"
-replace-with = "ustc"
+replace-with = "tuna"
 
 [source.ustc]
 registry = "git://mirrors.ustc.edu.cn/crates.io-index"
+
+[source.tuna]
+registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"
 
 [build]
 target = "arm-unknown-linux-musleabihf"
