--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pisugar-server"
-version = "1.4.2"
+version = "1.4.3"
 authors = ["PiSugar"]
 edition = "2018"
 
@@ -17,11 +17,13 @@ chrono = { version = "0.4", features = ["serde"] }
 tokio = { version = "0.2", features = ["full"] }
 tokio-util = "0.2"
 tokio-tungstenite = "0.10.1"
-futures = "0.3"
-futures-util = "0.3"
-futures-channel = "0.3"
+futures = "0.3.5"
+futures-util = "0.3.5"
+futures-channel = "0.3.5"
 hyper = "0.13"
 hyper-staticfile = "0.5.1"
+hyper-websocket-lite = "0.3.4"
+websocket-codec = "0.3.4"
 pisugar-core = { path = "../pisugar-core" }
 
 [[bin]]
