Fix auto charging

--- a/pisugar-server/debian/config.json
+++ b/pisugar-server/debian/config.json
@@ -8,5 +8,9 @@
     "long_tap_enable": false,
     "long_tap_shell": "",
     "auto_shutdown_level": 0.0,
-    "auto_shutdown_delay": 0.0
+    "auto_shutdown_delay": 0.0,
+    "auto_charging_range": [
+        80.0,
+        100.0
+    ]
 }
