--- a/electron/package.json
+++ b/electron/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron",
+  "name": "pisugar-frontend",
   "version": "0.0.1",
   "author": "Lin <jdaielin@gmail.com>",
   "description": "An electron-vue project",
@@ -85,7 +85,7 @@
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "devtron": "^1.4.0",
-    "electron": "^2.0.4",
+    "electron": "^9.1.0",
     "electron-builder": "^20.44.4",
     "electron-debug": "^1.5.0",
     "electron-devtools-installer": "^2.2.4",
