--- a/pisugar-core/Cargo.toml
+++ b/pisugar-core/Cargo.toml
@@ -3,6 +3,7 @@ name = "pisugar-core"
 version = "1.4.6"
 authors = ["PiSugare"]
 edition = "2018"
+license = "gplv3"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
