--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,7 +2,7 @@ name: Master
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
 
 jobs:
   build-all:
@@ -29,7 +29,7 @@ jobs:
       - name: Setup Nodejs
         uses: actions/setup-node@v1
         with:
-          node-version: '12.x'
+          node-version: "12.x"
       # Nodejs dependencies
       - run: npm install
         working-directory: electron
@@ -110,8 +110,9 @@ jobs:
           name: pisugar-debs
           path: |
             target/**/*.deb
-            target/**/rpmbuild/RPMS/**/*.rpm
+            target/**/*.rpm
             scripts/*
+            !**/rpmbuild/SRPMS/*
 
       # Development Release
       - uses: "marvinpinto/action-automatic-releases@latest"
@@ -123,8 +124,9 @@ jobs:
           draft: false
           files: |
             target/**/*.deb
-            target/**/rpmbuild/RPMS/**/*.rpm
+            target/**/*.rpm
             scripts/*
+            !**/rpmbuild/SRPMS/*
 
       # Upload QiNiu nightly
       - name: "Upload to QiNiu"
