--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -82,8 +82,8 @@ jobs:
         with:
           name: pisugar-debs
           path: |
-            target/**/*.deb
-            target/**/rpmbuild/RPMS/**/*.rpm
+            target/*/debian/*.deb
+            target/*/release/rpmbuild/RPMS/*.rpm
             scripts/*
 
       # Development Release
@@ -95,8 +95,8 @@ jobs:
           prerelease: true
           draft: false
           files: |
-            target/**/*.deb
-            target/**/rpmbuild/RPMS/**/*.rpm
+            target/*/debian/*.deb
+            target/*/release/rpmbuild/RPMS/*.rpm
             scripts/*
 
       # Upload QiNiu nightly
