--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -83,8 +83,8 @@ jobs:
         with:
           name: pisugar-debs
           path: |
-            target/**/*.deb
-            target/**/rpmbuild/RPMS/**/*.rpm
+            target/*/debian/*.deb
+            target/*/release/rpmbuild/RPMS/*.rpm
             scripts/*
 
       # Draft Release
@@ -94,8 +94,8 @@ jobs:
           prerelease: false
           draft: true
           files: |
-            target/**/*.deb
-            target/**/rpmbuild/RPMS/**/*.rpm
+            target/*/debian/*.deb
+            target/*/release/rpmbuild/RPMS/*.rpm
             scripts/*
 
       # Upload QiNiu nightly
